--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
+    "immutable": "^3.8.1",
     "node-sass": "^4.4.0",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.2.2",
