:wrench: Add new dependencies, upgrade all deps

--- a/package.json
+++ b/package.json
@@ -40,25 +40,40 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0",
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "dotenv": "^4.0.0",
     "draft-js": "^0.10.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.1",
+    "graphql": "^0.9.3",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
     "immutable": "^3.8.1",
+    "moment": "^2.18.1",
+    "mongoose": "^4.9.5",
     "node-sass": "^4.4.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "postcss-loader": "^1.2.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "react-transform-hmr": "^1.0.4",
+    "redux": "^3.6.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
@@ -76,7 +91,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "jest": "^18.1.0",
     "stylelint": "^7.7.1",
     "stylelint-config-devshelf": "^1.2.0",
     "stylelint-scss": "^1.4.1"
