--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "revolution",
+  "name": "notarikon",
   "version": "1.0.0",
-  "description": "Revolution",
+  "description": "Notarikon - An interactive story-building application.",
   "main": "server/index.js",
   "author": "Jason Etcovitch",
   "license": "MIT",
@@ -13,7 +13,6 @@
     "start": "nodemon --ignore app server/index.js",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./config/webpack.production.config.js --progress --profile --colors",
     "lint": "eslint **/*.js",
-    "test": "jest --coverage",
     "serve": "node server/index.js",
     "local": "cross-env NODE_ENV=production PORT=4000 npm run serve",
     "heroku-postbuild": "npm run build"
