--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "draft-js": "^0.10.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
+    "express-graphql": "^0.6.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.1",
     "graphql": "^0.9.3",
